# VkToy

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  conanfile.py  conanfile.txt
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/VkToy/: sample_library.hpp
scripts/: build.sh  env.sh  run.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Utils.cpp  Utils.hpp  VkToyApp.cpp  VkToyApp_imgui.cpp
src/app/imgui_backend/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_sdl2.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/shaders/: particle.comp  particle.vert  shader.frag  shader.vert
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
